unpackaged/main/default/objects/OutboundSMS__c/OutboundSMS__c.object-meta.xml
<CustomObject>
    <description>custom object to house outbound SMS information from any object</description>
    <label>OutboundSMS</label>
    <nameField>
        <displayFormat>SMS-{0000000000}</displayFormat>
        <label>OutboundSMS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OutboundSMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>