unpackaged/main/default/objects/OutboundSMS__c/fields/campaignName__c.field-meta.xml
<CustomField>
    <fullName>campaignName__c</fullName>
    <label>Campaign Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LTS -- Outbound SMS</fullName>
                <default>true</default>
                <label>LTS -- Outbound SMS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>