unpackaged/main/default/objects/OutboundSMS__c/fields/dispositionName__c.field-meta.xml
<CustomField>
    <fullName>dispositionName__c</fullName>
    <label>Disposition Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TEST GENERAL</fullName>
            </value>
            <value>
                <fullName>System Generated Outbound SMS</fullName>
                <default>true</default>
                <label>System Generated Outbound SMS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>