unpackaged/main/default/objects/OutboundSMS__c/fields/Parent_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Id__c</fullName>
    <label>Parent Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>