unpackaged/main/default/objects/OutboundSMS__c/fields/Retry_Counter__c.field-meta.xml
<CustomField>
    <fullName>Retry_Counter__c</fullName>
    <label>Retry Counter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>