unpackaged/main/default/objects/OutboundSMS__c/fields/sendSmsTaskId__c.field-meta.xml
<CustomField>
    <fullName>sendSmsTaskId__c</fullName>
    <label>sendSmsTaskId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>