unpackaged/main/default/objects/OutboundSMS__c/fields/timestamp__c.field-meta.xml
<CustomField>
    <fullName>timestamp__c</fullName>
    <label>timestamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>