unpackaged/main/default/objects/OutboundSMS__c/fields/toPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>toPhoneNumber__c</fullName>
    <label>toPhoneNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>