unpackaged/main/default/objects/OutboundSMS__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>message__c</columns>
    <columns>Status__c</columns>
    <columns>toPhoneNumber__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Retry_Counter__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>